--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,7 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="/Users/trevorcondon/Downloads/CTRE_Phoenix_FRCLibs_NON-WINDOWS_v5/java/lib/CTRE_Phoenix.jar" sourcepath="/Users/trevorcondon/Downloads/CTRE_Phoenix_FRCLibs_NON-WINDOWS_v5/java/lib/CTRE_Phoenix-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/trevorcondon/Downloads/CTRE_Phoenix_FRCLibs_NON-WINDOWS_v5/java/lib/CTRE_Phoenix-sources.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/CTRE_Phoenix-sources.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/CTRE_Phoenix.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
